[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yajaw"
dynamic = ["version"]
description = 'Yet Another Jira API Wrapper'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["jira", "api"]
authors = [
  { name = "rmrighes", email = "rmrighes@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "asyncio",
  "httpx",
  "syncasync"
]

[project.urls]
Documentation = "https://github.com/rmrighes/yajaw#readme"
Issues = "https://github.com/unknown/rmrighes/issues"
Source = "https://github.com/rmrighes/yajaw"

[tool.hatch.version]
path = "src/yajaw/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "mypy",
  "black",
  "pylint",
  "bandit",
  "isort"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
type-check = "mypy --config-file=./pyproject.toml --install-types --non-interactive ."
format-check = "black --diff ."
formatter = "black ."
isort-check = "isort --check-only --diff ."
importsort = "isort ."
linter-check = "pylint **/*.py"
security-check = "bandit -r . -c 'pyproject.toml'"


[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]


[tool.coverage.run]
source_pkgs = ["yajaw", "tests"]
branch = true
parallel = true
omit = [
  "src/yajaw/__about__.py",
  "*/tests/*",
]

[tool.coverage.paths]
yajaw = ["src/yajaw", "*/yajaw/src/yajaw"]
tests = ["tests", "*/yajaw/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
ignore = [
  "T201",  # print() is used only on temporary example file 
]
output-format = "github"


[tool.bandit]
exclude_dirs = ["*.venv/*", "*/tests/*"]
skips = ["B101"]


[tool.black]
line-length = 100


[tool.isort]
profile = "black"
